force-app/main/default/objects/CustomOpportunity__c/fields/InclusionStage__c.field-meta.xml
<CustomField>
    <fullName>InclusionStage__c</fullName>
    <description>Steg</description>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ny henvendelse</fullName>
                <default>true</default>
                <label>Ny henvendelse</label>
            </value>
            <value>
                <fullName>Avklaring</fullName>
                <label>Utforskes</label>
            </value>
            <value>
                <fullName>Ferdig Avklart</fullName>
                <label>Åpen for kandidater</label>
            </value>
            <value>
                <fullName>Avsluttet</fullName>
            </value>
            <value>
                <fullName>Aktiv</fullName>
            </value>
            <value>
                <fullName>Ansvarlig tildelt</fullName>
            </value>
            <value>
                <fullName>Virksomhet kontaktet</fullName>
            </value>
            <value>
                <fullName>Finn kandidat</fullName>
            </value>
            <value>
                <fullName>Kandidat presentert</fullName>
            </value>
            <value>
                <fullName>Evaluering</fullName>
            </value>
            <value>
                <fullName>Plan</fullName>
            </value>
            <value>
                <fullName>Gjennomføring</fullName>
            </value>
            <value>
                <fullName>TAG_IALukket</fullName>
                <label>Lukket</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>