force-app/main/default/objects/CustomOpportunity__c/fields/InquiryCategory__c.field-meta.xml
<CustomField>
    <fullName>InquiryCategory__c</fullName>
    <description>Henvendelseskategori</description>
    <label>Inquiry Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Skal ansette</fullName>
            </value>
            <value>
                <fullName>Tiltak</fullName>
            </value>
            <value>
                <fullName>Forebygge sykefravær</fullName>
            </value>
            <value>
                <fullName>Innvandring og integrering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>