force-app/main/default/objects/CustomOpportunity__c/fields/PhysicalArrangements__c.field-meta.xml
<CustomField>
    <fullName>PhysicalArrangements__c</fullName>
    <description>Fysisk tilrettelegging</description>
    <label>Physical Arrangements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>InquiryCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>PhysicalArrangements</valueSetName>
    </valueSet>
</CustomField>