force-app/main/default/objects/CustomOpportunity__c/recordTypes/Inclusion.recordType-meta.xml
<RecordType>
    <fullName>Inclusion</fullName>
    <active>true</active>
    <description>En mulighet for inkludering</description>
    <label>Inclusion</label>
</RecordType>