force-app/main/default/objects/CustomOpportunity__c/recordTypes/Inclusive_Employment.recordType-meta.xml
<RecordType>
    <fullName>Inclusive_Employment</fullName>
    <active>true</active>
    <description>IA - prosess</description>
    <label>Inclusive Employment</label>
</RecordType>