force-app/main/default/objects/CustomOpportunity__c/listViews/Alle_muligheter.listView-meta.xml
<ListView>
    <fullName>Alle_muligheter</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>InquiryCategory__c</columns>
    <columns>InclusionStage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>PhysicalArrangements__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CustomOpportunity__c.Inclusion</value>
    </filters>
    <label>Alle muligheter</label>
</ListView>